[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/ButtonPressed.png" type="Texture" id=1]
[ext_resource path="res://sprites/ButtonHover.png" type="Texture" id=2]
[ext_resource path="res://scripts/Button.gd" type="Script" id=3]
[ext_resource path="res://art/font/dogica/dogica small.tres" type="DynamicFont" id=4]
[ext_resource path="res://sprites/Button.png" type="Texture" id=5]
[ext_resource path="res://sprites/ButtonBorder.png" type="Texture" id=6]

[node name="Button" type="Control"]
margin_right = 64.0
margin_bottom = 64.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonHighlight" type="TextureRect" parent="."]
visible = false
margin_right = 64.0
margin_bottom = 64.0
mouse_filter = 2
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonNormal" type="TextureButton" parent="."]
margin_right = 64.0
margin_bottom = 64.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="."]
margin_right = 64.0
margin_bottom = 64.0
mouse_filter = 2

[node name="ButtonBorder" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonHover" type="TextureRect" parent="."]
visible = false
margin_right = 64.0
margin_bottom = 64.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="Count" type="Label" parent="."]
anchor_left = 0.85
anchor_top = 0.75
anchor_right = 0.85
anchor_bottom = 0.75
margin_left = -64.0
margin_top = -12.0
custom_fonts/font = ExtResource( 4 )
text = "99"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonDisabled" type="TextureRect" parent="."]
visible = false
modulate = Color( 0, 0, 0, 0.627451 )
margin_right = 64.0
margin_bottom = 64.0
mouse_filter = 2
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="ButtonNormal" to="." method="_on_ButtonNormal_mouse_entered"]
[connection signal="mouse_exited" from="ButtonNormal" to="." method="_on_ButtonNormal_mouse_exited"]
[connection signal="pressed" from="ButtonNormal" to="." method="_on_ButtonNormal_pressed"]
[connection signal="toggled" from="ButtonNormal" to="." method="_on_ButtonNormal_toggled"]
